<resources>
    <string name="app_name">User_Register</string>
    <string name="registar">Registar</string>
    <string name="mostrar">Mostrar</string>
    <string name="nombre">nombre</string>
    <string name="apellido">apellido</string>
    <string name="telefono">telefono</string>
    <string name="contrasena">contrasena</string>
    <string name="usuario">usuario</string>
    <string name="lista_de_usuarios">LISTA DE USUARIOS</string>
    <string name="login">LOGIN</string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="registrarse">Registrarse</string>


</resources>