<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editNombre"
        app:layout_constraintTop_toBottomOf="@+id/editNombre" />

    <EditText
        android:id="@+id/editTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editApellido"
        app:layout_constraintTop_toBottomOf="@+id/editApellido" />

    <EditText
        android:id="@+id/editCedula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="cedula"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editTelefono"
        app:layout_constraintTop_toBottomOf="@+id/editTelefono" />

    <EditText
        android:id="@+id/editContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editCedula"
        app:layout_constraintTop_toBottomOf="@+id/editCedula" />

    <EditText
        android:id="@+id/editUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/editContrasena"
        app:layout_constraintTop_toBottomOf="@+id/editContrasena" />

    <Button
        android:id="@+id/button_Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="106dp"
        android:text="@string/registar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Mostar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/mostrar"
        app:layout_constraintBottom_toBottomOf="@+id/button_Registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_Registro"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>