<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewLoginUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="183dp"
        android:layout_marginBottom="182dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegistrarseLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/User"
        app:layout_constraintTop_toBottomOf="@+id/User" />

    <Button
        android:id="@+id/buttonIngresarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="Ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegistrarseLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="93dp"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toTopOf="@+id/buttonIngresarLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>